@@ -65,7 +65,7 @@ public:
 	int zIndex;
 	KCanvasUserData path, userData;
 
-	QRect bbox;
+	QRect fillBBox, strokeBbox;
 
 	KCanvasContainer *parent;
 	KCanvasItem *prev;
@@ -119,19 +119,22 @@ bool KCanvasItem::strokeContains(const QPoint &p) const
 
 QRect KCanvasItem::bbox(bool includeStroke) const
 {
-	if(!d->bbox.isValid())
-	{
-		if(d->path && canvas() && canvas()->renderingDevice())
-		{
-			QRect bbox = bboxPath(includeStroke);
-			if(!includeStroke)
-				return bbox;
+    QRect result;
+    
+    if (!d->path || !canvas() || !canvas()->renderingDevice())
+        return result;
 
-			d->bbox = bbox; // cache it
-		}
-	}
-
-	return d->bbox;
+    if (includeStroke) {
+        if(!d->strokeBbox.isValid())
+            d->strokeBbox = bboxPath(true);
+        result = d->strokeBbox;
+    } else {
+        if(!d->fillBBox.isValid())
+            d->fillBBox = bboxPath(false);
+        result = d->fillBBox;
+    }
+    
+    return result;
 }
 
 bool KCanvasItem::hitsPath(const QPoint &hitPoint, bool fill) const
@@ -190,7 +193,8 @@ void KCanvasItem::invalidate() const
 	if(d->canvas)
 	{
 		d->canvas->invalidate(this);
-		d->bbox = QRect();
+		d->fillBBox = QRect();
+                d->strokeBbox = QRect();
 	}
 }
 
